[gd_scene load_steps=16 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]
[ext_resource path="res://firstarrow.png" type="Texture" id=2]
[ext_resource path="res://AstronBoyWonder.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://arrowpulse1.png" type="Texture" id=4]
[ext_resource path="res://arrowpulse2.png" type="Texture" id=5]
[ext_resource path="res://arrowpulse3.png" type="Texture" id=6]
[ext_resource path="res://arrowpulse4.png" type="Texture" id=7]
[ext_resource path="res://arrowpulse5.png" type="Texture" id=8]
[ext_resource path="res://arrowpulse7.png" type="Texture" id=9]
[ext_resource path="res://arrowpulse8.png" type="Texture" id=10]
[ext_resource path="res://secondarrow.png" type="Texture" id=11]
[ext_resource path="res://thirdarrow.png" type="Texture" id=12]
[ext_resource path="res://fourtharrow.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]

size = 135
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "pulse",
"speed": 24.0
} ]
_sections_unfolded = [ "Resource" ]

[node name="Control" type="CanvasLayer" index="0"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="Input1" type="Sprite" parent="." index="0"]

position = Vector2( 325, 700 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="ControlKey" type="Label" parent="Input1" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -70.0
margin_top = -60.0
margin_right = 70.0
margin_bottom = 82.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "J"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Pulse" type="AnimatedSprite" parent="Input1" index="1"]

visible = false
scale = Vector2( 1.1, 1.1 )
frames = SubResource( 2 )
animation = "pulse"
frame = 5
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Input2" type="Sprite" parent="." index="1"]

position = Vector2( 450, 700 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 11 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="ControlKey" type="Label" parent="Input2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -70.0
margin_top = -60.0
margin_right = 70.0
margin_bottom = 82.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "I"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Pulse" type="AnimatedSprite" parent="Input2" index="1"]

visible = false
scale = Vector2( 1.1, 1.1 )
frames = SubResource( 2 )
animation = "pulse"
frame = 5
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Input3" type="Sprite" parent="." index="2"]

position = Vector2( 575, 700 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 12 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="ControlKey" type="Label" parent="Input3" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -70.0
margin_top = -60.0
margin_right = 70.0
margin_bottom = 82.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "K"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Pulse" type="AnimatedSprite" parent="Input3" index="1"]

visible = false
scale = Vector2( 1.1, 1.1 )
frames = SubResource( 2 )
animation = "pulse"
frame = 5
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Input4" type="Sprite" parent="." index="3"]

position = Vector2( 700, 700 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 13 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="ControlKey" type="Label" parent="Input4" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -70.0
margin_top = -60.0
margin_right = 70.0
margin_bottom = 82.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "L"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Pulse" type="AnimatedSprite" parent="Input4" index="1"]

visible = false
scale = Vector2( 1.1, 1.1 )
frames = SubResource( 2 )
animation = "pulse"
frame = 5
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="BPM" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 0.25
one_shot = true
autostart = false

[node name="Label" type="Label" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 250.0
margin_bottom = 220.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="6"]

stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="animation_finished" from="Input1/Pulse" to="." method="down_beat"]

[connection signal="animation_finished" from="Input2/Pulse" to="." method="down_beat"]

[connection signal="animation_finished" from="Input3/Pulse" to="." method="down_beat"]

[connection signal="animation_finished" from="Input4/Pulse" to="." method="down_beat"]

[connection signal="timeout" from="BPM" to="." method="up_beat"]


